# midorisour-playground

./: .gitignore  README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml
blog/: authors.yml  tags.yml
blog/Working-With-Frontend/use-normal-api-schema/: index.md  index.mdx
blog/fastapi/: test.md
blog/flutter/: test.md
docs/python-release/: 3.14.mdx  _category_.json
playground/working_with_frontend/: todo.md
playground/working_with_frontend/use-normal-api-schema/fastapi_filter/: post.md
playground/working_with_frontend/use-normal-api-schema/use_union/: post.md
playground/working_with_frontend/use-normal-api-schema/use_union/example/flutter/: pubspec.yaml
playground/working_with_frontend/use-normal-api-schema/use_union/example/web/: package.json
playground/working_with_frontend/with_code_generator/use_union/example/fastapi/: main.py  pyproject.toml
playground/working_with_frontend/with_code_generator/use_union/example/flutter/: README.md  (+1 more)
src/components/: LatestPosts.tsx  ReleaseMeta.tsx
src/components/PortfolioLayout/: index.tsx  styles.module.css
src/components/Showcase/: Filters.tsx  ShowcaseCard.tsx
src/components/Toggle/: index.tsx  styles.module.css
src/css/: custom.css
src/data/: portfolio.ts  showcase.ts
src/pages/: index.module.css  index.tsx  resume.mdx
src/pages/portfolio/: index.tsx  pinokiolab-a.mdx  pinokiolab-spino.mdx
src/pages/showcase/: index.tsx
src/theme/BlogPostItem/Header/Title/: index.tsx  styles.module.css
src/theme/BlogSidebar/Content/: index.tsx
src/theme/MDXComponents/: index.tsx
(+23 files in other folders)
